--- a/labs/inventory.yml
+++ b/labs/inventory.yml
@@ -4,10 +4,10 @@ all:
     CVP:
       hosts:
         CloudVision:
-          ansible_httpapi_host: 192.168.0.5
-          ansible_host: 192.168.0.5
+          ansible_httpapi_host: 192.168.130.249
+          ansible_host: 192.168.130.249
           ansible_user: arista
-          ansible_password: arista
+          ansible_password: arista123
           ansible_connection: httpapi
           ansible_httpapi_use_ssl: True
           ansible_httpapi_validate_certs: False
