--- a/labs/lab09-avd-eos-cli-config-gen/group_vars/DC1_FABRIC.yml
+++ b/labs/lab09-avd-eos-cli-config-gen/group_vars/DC1_FABRIC.yml
@@ -38,6 +38,10 @@ bgp_peer_groups:
 
 # Spine Switches
 spine:
+  defaults:
+    loopback_ipv4_pool: 192.168.255.0/24
+    vtep_loopback_ipv4_pool: 192.168.254.0/24
+    bgp_as: 65001
   platform: vEOS-LAB
   bgp_as: 65001
   # defines the range of acceptable remote ASNs from leaf switches
@@ -66,6 +70,10 @@ l3leaf:
     mlag_interfaces: [Ethernet1, Ethernet6]
     spanning_tree_priority: 4096
     spanning_tree_mode: mstp
+    loopback_ipv4_pool: 192.168.255.0/24
+    vtep_loopback_ipv4_pool: 192.168.254.0/24
+    mlag_peer_ipv4_pool: 10.255.252.0/24
+    mlag_peer_l3_ipv4_pool: 10.255.254.0/24
   node_groups:
     DC1_LEAF1:
       bgp_as: 65101
